--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "tui"
 version = "0.1.0"
 authors = ["Raclett3 <im@s283.net>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 termios = "0.3.2"
+rand = "0.8"
